--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: FactoCloudConnect
 description: Facto Cloud Connect Documentation
-baseurl: "/factocloudconnect" # the subpath of your site, e.g. /blog
+baseurl: "/factomes" # the subpath of your site, e.g. /blog
 url: "https://optebiz-inc.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
